oj_backend/errors/64d48b9b-8e83-4a92-8fd7-263f6b2b98ad.txt
  File "/Users/amritanand/Desktop/myWork/frontend/CoderHub/oj_backend/codes/64d48b9b-8e83-4a92-8fd7-263f6b2b98ad.python", line 2
    print("
          ^
SyntaxError: unterminated string literal (detected at line 2)
